--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,12 +7,8 @@ spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=update
 
 
-
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 server.error.whitelabel.enabled=true
 
-
-
-
-
 spring.main.allow-circular-references=true
+spring.mvc.hiddenmethod.filter.enabled=true
